-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.0.0, 5.3.2, 5.12, 5.15.11, 6.2.6, 6.4.1
-
Windows 7 Enterprise English edition with Chinese language pack installed.
Qt 5.0(http://releases.qt-project.org/qt5/5.0.0/qt-windows-opensource-5.0.0-msvc2010_32-x86-offline.exe)
-
-
4a5abfcea (dev)
Steps to Reproduce
Run the Wiggle Example (https://doc.qt.io/qt-6/qtwidgets-widgets-wiggly-example.html ) and copy + paste some affected text into the QLineEdit:
(Fun fact: JIRA crashes if I include those characters directly in this description)
Outcome
The text renders correctly in the QLineEdit but not in the WigglyWidget.
Original Report
http://www.unicode.org/cgi-bin/GetUnihanData.pl?codepoint=22489
This Chinese character will be stored using surrogate pairs, QPainter's drawText method can't paint this character, and QTextEdit can't display this character too. In both test, I use a font named "SimSun".
The same character can be displayed by other programs in my computer.
- replaces
-
QTBUG-43333 CLONE - QPainter's drawText method can't paint unicode characters with code values above 65535
-
- Closed
-
For Gerrit Dashboard: QTBUG-28853 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
447355,4 | wiggly example: add support for emojis etc. (utf16 surrogate pairs) | dev | qt/qtbase | Status: MERGED | +2 | 0 |